--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1074,6 +1074,12 @@ p {
 }
 
 /* ===== about css ====== */
+.border-btn{
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
 .about-section {
   position: relative;
   z-index: 1;
